DONATE MODAL | fixed content overflow issue for mobile donate modal

--- a/src/components/payment/donate_styles.scss
+++ b/src/components/payment/donate_styles.scss
@@ -34,7 +34,7 @@
   padding: 20px 40px 20px 40px;
   border: none;
   @include respond-to("small") {
-    padding: 10px;
+    padding: 0px 10px;
   }
 }
 
@@ -79,8 +79,8 @@
   }
   @include respond-to("small") {
     padding: 8px 12px;
-    margin-top: 4%;
-    margin-bottom: 4%;
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
   }
 }
 
